Cleaning up unneccessary settings and files

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F39331</color>
-    <color name="colorPrimaryDark">#9E621E</color>
+    <color name="colorPrimaryDark">#9A6111</color>
     <color name="colorAccent">#F2B4FE</color>
 </resources>
